--- a/react_intro/task_0/dashboard/src/App.css
+++ b/react_intro/task_0/dashboard/src/App.css
@@ -1,38 +1,36 @@
+* {
+  font-family: 'Calibri';
+}
+
+:root {
+  --primary-color: #e0354b;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  max-height: 200px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h1 {
+  color: var(--primary-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-body {
+  padding: 0 5%;
+  min-height: 60vh;
+  border: 3px solid var(--primary-color);
+  border-left: none;
+  border-right: none;
+}
+
+.App-body p {
+  text-align: left;
 }
