--- a/react_intro/task_2/dashboard/src/Notifications.css
+++ b/react_intro/task_2/dashboard/src/Notifications.css
@@ -1,7 +1,13 @@
-/* task_1/dashboard/src/Notifications.css */
-
 .Notifications {
-  border: 1px solid #ccc; /* Añade un borde de 1px sólido de color gris claro */
-  padding: 10px; /* Agrega 10px de relleno alrededor del contenido */
+  border: 1px dashed #e0354b;
+  border-width: 2px;
+  padding: 0.5rem;
 }
 
+.Notifications li[data-priority="default"] {
+  color: blue;
+}
+
+.Notifications li[data-priority="urgent"] {
+  color: red;
+}
